# QuintetX

./: .env_example  .gitignore  LICENSE  QuintetX_SDK.py  README.md  SDK.md  SDK.readme  SDK_Instruction.md  docker-compose.test.yml  main.py  pyproject.toml  quintetx-alphazero-kaggle-resume.ipynb  quintetx-ppo-rl-resume13m.ipynb  quintetx-rl-resnet6-fix.ipynb  sdk_example_agent.py  sdk_gui.py  sdk_run.py  test.md
.github/: architect.md  copilot-instructions.md  system.md
.github/ISSUE_TEMPLATE/: user-story.md
.github/workflows/: cd-ubuntu-ssh.yml  ci.yml
agents/: fake_agent_o.py  fake_agent_x.py  greedy_agent.py
app/api/: agent.py  auth.py  deps.py  groups.py  matches.py  metrics.py
app/core/: config.py  metrics.py  mock_data.py  security.py
app/db/: __init__.py  client.py  init_db.py  validators.py
app/services/: match_engine.py
docs/: auth-api.md
scripts/: drop_room_name_index.py
solutions/: solution_first_empty.py  solution_greedy.py
static/js/: board_canvas.js  config.js
static/js/api/: client.js  groups.js  matches.js
templates/: 401.html  base.html  login_admin.html  login_student.html  register_student.html
templates/admin/: approvals.html  base_admin.html  dashboard.html  match.html  placeholder.html  rooms.html  teams.html
templates/student/: base_student.html  dashboard.html  history.html  instructions.html  match.html  team.html
tests/: conftest.py  test_agent_api.py  test_agent_extra_api.py  test_auth_api.py  test_auth_extra_api.py  test_bot_api.py  test_game_engine_api.py  test_groups_api.py  test_groups_extra_api.py  test_matches_api.py  test_matches_extra_api.py  test_mongo_integration.py  test_security_api.py  test_system_api.py  test_system_extra_api.py
(+1 files in other folders)
