[project]
name = "quintetx"
version = "0.1.0"
description = ""
authors = [
    {name = "hauuto",email = "thanhhau670@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "motor (>=3.6.0,<4.0.0)",
    "pymongo (>=4.9.0,<5.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "requests (>=2.32.0,<3.0.0)"
]
[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"
pytest-asyncio = ">=0.24.0,<1.0.0"
httpx = ">=0.27.0,<1.0.0"
mongomock-motor = "^0.0.36"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "api: API and business-flow tests",
    "mongo: real MongoDB integration tests",
    "ui: UI smoke tests",
    "slow: slower end-to-end tests",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
